--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start": "vite"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
