--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nahid-ahmed-portfolio",
+  "homepage": "www.nahidahmed.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
