--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nahid-ahmed-portfolio",
-  "homepage": "https://nahidahmed.com",
+  "homepage": "https://www.nahidahmed.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
