--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
   "version": 2,
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/server/server.js" },
-    { "source": "/(.*)", "destination": "index.html" }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "index.html" }]
 }
