--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
   "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/", "methods": ["GET", "POST"] }]
+  "routes": [{ "src": "/(.*)", "dest": "/", "methods": ["GET", "POST", "OPTIONS"] }]
 }
