--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node servers.js",
     "seed": "node seeds/seed.js",
     "watch": "nodemon server.js"
   },
