--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.7.14",
     "@react-spring/web": "^9.7.3",
     "axios": "^1.6.8",
+    "framer-motion": "^11.3.21",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
